--- a/CityAdmin/App_LocalResources/ParticipantList.aspx.de-DE.resx
+++ b/CityAdmin/App_LocalResources/ParticipantList.aspx.de-DE.resx
@@ -153,4 +153,7 @@
   <data name="RecordsUpdated" xml:space="preserve">
     <value>Schülerdaten aktualisiert.</value>
   </data>
+  <data name="lbtngrdUsername.Text" xml:space="preserve">
+    <value>Nutzername</value>
+  </data>
 </root>
