--- a/ClassAdmin/App_LocalResources/ParticipantList.aspx.resx
+++ b/ClassAdmin/App_LocalResources/ParticipantList.aspx.resx
@@ -156,7 +156,7 @@
   <data name="lblUploadBlocked.Text" xml:space="preserve">
     <value>Upload Block</value>
   </data>
-  <data name="lbtngrdUsername.Text" xml:space="preserve">
-    <value>User Name</value>
+  <data name="btnDeleteStudent.Text" xml:space="preserve">
+    <value>Delete</value>
   </data>
 </root>
