--- a/AppAdmin/App_LocalResources/SchoolClassMaster.aspx.de-DE.resx
+++ b/AppAdmin/App_LocalResources/SchoolClassMaster.aspx.de-DE.resx
@@ -204,4 +204,16 @@
   <data name="btnEdit.ToolTip" xml:space="preserve">
     <value>bearbeiten</value>
   </data>
+  <data name="btnDeleteClass.Text" xml:space="preserve">
+    <value>Löschen</value>
+  </data>
+  <data name="btnDeleteClass.ToolTip" xml:space="preserve">
+    <value>löschen</value>
+  </data>
+  <data name="lbldeleteClass.Text" xml:space="preserve">
+    <value>Löschen</value>
+  </data>
+  <data name="ClassDelete" xml:space="preserve">
+    <value>Klasse gelöscht</value>
+  </data>
 </root>
