--- a/CityAdmin/App_LocalResources/Forum.aspx.de-DE.resx
+++ b/CityAdmin/App_LocalResources/Forum.aspx.de-DE.resx
@@ -184,7 +184,7 @@
     <value>Eine Platzierung schlechter</value>
   </data>
   <data name="btn_DeleteAllBlogs.Text" xml:space="preserve">
-    <value>Alle Blogeinträge löschen</value>
+    <value>Alle Blogeinträge dieser Stadt löschen?</value>
   </data>
   <data name="BlogDeleted" xml:space="preserve">
     <value>Blog gelöscht</value>
