1. Additional column for UserName in Participant List and deletion of "active" column.
2. the students are activated with one click and the students should then be able to login.
3. City admins should have the right to delete gpx files of students.
4. check if the file is a valid file and if so please change to word Ungültig to Gültig.
5. City admins should be able to delete all students of the city with one click

--- a/CityAdmin/App_LocalResources/ParticipantList.aspx.resx
+++ b/CityAdmin/App_LocalResources/ParticipantList.aspx.resx
@@ -162,4 +162,7 @@
   <data name="StudentDeleted" xml:space="preserve">
     <value>Student deleted</value>
   </data>
+  <data name="lbtngrdLoginName.Text" xml:space="preserve">
+    <value>User Name</value>
+  </data>
 </root>
