--- a/ClassAdmin/App_LocalResources/ParticipantList.aspx.de-DE.resx
+++ b/ClassAdmin/App_LocalResources/ParticipantList.aspx.de-DE.resx
@@ -159,4 +159,7 @@
   <data name="btnDeleteStudent.Text" xml:space="preserve">
     <value>Löschen</value>
   </data>
+  <data name="lbtngrdLoginName.Text" xml:space="preserve">
+    <value>Nutzername</value>
+  </data>
 </root>
