--- a/App_LocalResources/Master.master.resx
+++ b/App_LocalResources/Master.master.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="chkMarkInvalidFile.Text" xml:space="preserve">
+    <value>Mark all uploaded file invalid.</value>
+  </data>
+  <data name="lblCityDateSetting.Text" xml:space="preserve">
+    <value>Set City Parameters</value>
+  </data>
   <data name="lblLoginHome.Text" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="lblSetCityDate.Text" xml:space="preserve">
+    <value>Start Date</value>
+  </data>
+  <data name="rfvtxt_Date.Error" xml:space="preserve">
+    <value>Start Date is mandatory.</value>
   </data>
 </root>
