--- a/CityAdmin/App_LocalResources/ParticipantList.aspx.de-DE.resx
+++ b/CityAdmin/App_LocalResources/ParticipantList.aspx.de-DE.resx
@@ -162,4 +162,7 @@
   <data name="StudentDeleted" xml:space="preserve">
     <value>Student gelöscht</value>
   </data>
+  <data name="lbtngrdLoginName.Text" xml:space="preserve">
+    <value>Nutzername</value>
+  </data>
 </root>
