--- a/CityAdmin/App_LocalResources/StudentDetails.aspx.de-DE.resx
+++ b/CityAdmin/App_LocalResources/StudentDetails.aspx.de-DE.resx
@@ -124,7 +124,7 @@
     <value>Hochgeladene Datei</value>
   </data>
   <data name="lblgrdInValid.Text" xml:space="preserve">
-    <value>Ungültig</value>
+    <value>Gültig</value>
   </data>
   <data name="lblgrdKilometer.Text" xml:space="preserve">
     <value>Kilometer</value>
@@ -197,5 +197,20 @@
   </data>
   <data name="lblUsername.Text" xml:space="preserve">
     <value>Nutzername</value>
+  </data>
+  <data name="btnDeleteFile.Text" xml:space="preserve">
+    <value>Löschen GPX -Datei (en )</value>
+  </data>
+  <data name="DeleteFile.ConfirmMessage" xml:space="preserve">
+    <value>Die ausgewählten Dateien werden gelöscht permanetely und dass es keine Sicherung. Möchtest du fortfahren?</value>
+  </data>
+  <data name="DeleteFile.SuccessMessage" xml:space="preserve">
+    <value>Die ausgewählten Dateien werden erfolgreich gelöscht.</value>
+  </data>
+  <data name="DeleteFile.ErrorMessage" xml:space="preserve">
+    <value>Können Sie ausgewählte Dateien zu finden.</value>
+  </data>
+  <data name="lblgrdDelete.Text" xml:space="preserve">
+    <value>Wählen</value>
   </data>
 </root>
