--- a/CityAdmin/App_LocalResources/CityParameters.aspx.resx
+++ b/CityAdmin/App_LocalResources/CityParameters.aspx.resx
@@ -117,7 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lblLoginHome.Text" xml:space="preserve">
-    <value>Login</value>
+  <data name="lblSetCityDate.Text" xml:space="preserve">
+    <value>Start Date</value>
+  </data>
+  <data name="rfvtxt_DateError.ErrorMessage" xml:space="preserve">
+    <value>Start Date is mandatory.</value>
+  </data>
+  <data name="btn_Cancel.Text" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="btn_Save.Text" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="lblMarkInvalidFile.Text" xml:space="preserve">
+    <value>Mark all uploaded file invalid.</value>
+  </data>
+  <data name="rfvCity.ErrorMessage" xml:space="preserve">
+    <value>Please choose a city</value>
+  </data>
+  <data name="lblClass.Text" xml:space="preserve">
+    <value>City</value>
+  </data>
+  <data name="Message.Success" xml:space="preserve">
+    <value>Parameters updated successfully.</value>
+  </data>
+  <data name="Message.Confirm" xml:space="preserve">
+    <value>Do you really want, all files to be invalid?</value>
+  </data>
+  <data name="Message.Error" xml:space="preserve">
+    <value>Unable to update parameters.</value>
+  </data>
+  <data name="lblCityParamHead.Text" xml:space="preserve">
+    <value>Set City Parameters</value>
   </data>
 </root>
