--- a/SiteMaster/App_LocalResources/AdminMaster.master.resx
+++ b/SiteMaster/App_LocalResources/AdminMaster.master.resx
@@ -231,4 +231,7 @@
   <data name="lblSupport.Text" xml:space="preserve">
     <value>Support</value>
   </data>
+  <data name="lblCityDateSetting.Text" xml:space="preserve">
+    <value>Set City Parameters</value>
+  </data>
 </root>
