1. Change the “Sparen” button to “Aktualisieren”.
2. Cannot verify a student as a class admin.
3. Unable to Upload .GPX file.
4. On FAQ, would get rid of the “ICH WÜRDE” column since it doesn’t really mean anything.

--- a/SiteMaster/App_LocalResources/AdminMaster.master.resx
+++ b/SiteMaster/App_LocalResources/AdminMaster.master.resx
@@ -234,4 +234,7 @@
   <data name="lblCityDateSetting.Text" xml:space="preserve">
     <value>Set City Parameters</value>
   </data>
+  <data name="lblFAQMaster.Text" xml:space="preserve">
+    <value>FAQ</value>
+  </data>
 </root>
