--- a/App_LocalResources/FAQ.aspx.de-DE.resx
+++ b/App_LocalResources/FAQ.aspx.de-DE.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnUpdate.Text" xml:space="preserve">
+    <value>sparen</value>
+  </data>
+  <data name="FAQDeleted" xml:space="preserve">
+    <value>FAQ erfolgreich gelöscht</value>
+  </data>
+  <data name="lblDeleteFAQ.Text" xml:space="preserve">
+    <value>Löschen</value>
+  </data>
+  <data name="lblQuestion.Text" xml:space="preserve">
+    <value>Frage</value>
+  </data>
+  <data name="lblEditFAQ.Text" xml:space="preserve">
+    <value>Bearbeiten</value>
+  </data>
+  <data name="lblgrdFAQId.Text" xml:space="preserve">
+    <value>ICH WÜRDE</value>
+  </data>
   <data name="lblHead.Text" xml:space="preserve">
     <value>FAQ</value>
+  </data>
+  <data name="lblAnswer.Text" xml:space="preserve">
+    <value>Antworten</value>
   </data>
 </root>
