--- a/CityAdmin/App_LocalResources/FAQ.aspx.de-DE.resx
+++ b/CityAdmin/App_LocalResources/FAQ.aspx.de-DE.resx
@@ -117,100 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btn_Cancel.Text" xml:space="preserve">
-    <value>Back</value>
+  <data name="btnUpdate.Text" xml:space="preserve">
+    <value>Aktualisieren</value>
   </data>
-  <data name="btn_SaveGrid.Text" xml:space="preserve">
-    <value>Save</value>
+  <data name="FAQDeleted" xml:space="preserve">
+    <value>FAQ erfolgreich gelöscht</value>
   </data>
-  <data name="btn_Upload.Text" xml:space="preserve">
-    <value>Upload</value>
+  <data name="lblDeleteFAQ.Text" xml:space="preserve">
+    <value>Löschen</value>
   </data>
-  <data name="lblClass.Text" xml:space="preserve">
-    <value>Select Class :</value>
+  <data name="lblQuestion.Text" xml:space="preserve">
+    <value>Frage</value>
   </data>
-  <data name="lblgrdAvgSpeed.Text" xml:space="preserve">
-    <value>Speed (KMPH)</value>
+  <data name="lblEditFAQ.Text" xml:space="preserve">
+    <value>Bearbeiten</value>
   </data>
-  <data name="lblgrdDate.Text" xml:space="preserve">
-    <value>Date</value>
+  <data name="lblgrdFAQId.Text" xml:space="preserve">
+    <value>ICH WÜRDE</value>
   </data>
-  <data name="lblgrdDistance.Text" xml:space="preserve">
-    <value>Distance (KM)</value>
+  <data name="lblHead.Text" xml:space="preserve">
+    <value>FAQ</value>
   </data>
-  <data name="lblgrdDownload.Text" xml:space="preserve">
-    <value>Download</value>
-  </data>
-  <data name="lblgrdStatus.Text" xml:space="preserve">
-    <value>Status</value>
-  </data>
-  <data name="lblgrdStudentName.Text" xml:space="preserve">
-    <value>StudentName</value>
-  </data>
-  <data name="lblgrdTime.Text" xml:space="preserve">
-    <value>Time (Hr)</value>
-  </data>
-  <data name="lblgrdUploadedFile.Text" xml:space="preserve">
-    <value>Uploaded File</value>
-  </data>
-  <data name="lblSchool.Text" xml:space="preserve">
-    <value>Select School :</value>
-  </data>
-  <data name="lblClassSchool.Text" xml:space="preserve">
-    <value>Upload GPX File</value>
-  </data>
-  <data name="lblFileName.Text" xml:space="preserve">
-    <value>File Name :</value>
-  </data>
-  <data name="rfvClass.ErrorMessage" xml:space="preserve">
-    <value>Please select class.</value>
-  </data>
-  <data name="rfvSchool.ErrorMessage" xml:space="preserve">
-    <value>Please select school.</value>
-  </data>
-  <data name="lblSearchSpeed.Text" xml:space="preserve">
-    <value>Speed (Greater than or Equals)</value>
-  </data>
-  <data name="btnClearSearch.Text" xml:space="preserve">
-    <value>Clear</value>
-  </data>
-  <data name="btnSearch.Text" xml:space="preserve">
-    <value>Search</value>
-  </data>
-  <data name="Approved" xml:space="preserve">
-    <value>Approved</value>
-  </data>
-  <data name="ApprovedText.Value" xml:space="preserve">
-    <value>Are you sure, you want to approve this file?</value>
-  </data>
-  <data name="ApproveText.ToolTip" xml:space="preserve">
-    <value>Approve</value>
-  </data>
-  <data name="FileApproved" xml:space="preserve">
-    <value>File is approved successfully!</value>
-  </data>
-  <data name="FileRejected" xml:space="preserve">
-    <value>File is rejected successfully!</value>
-  </data>
-  <data name="Pending" xml:space="preserve">
-    <value>Pending</value>
-  </data>
-  <data name="Rejected" xml:space="preserve">
-    <value>Rejected</value>
-  </data>
-  <data name="RejectedText.Value" xml:space="preserve">
-    <value>Are you sure, you want to reject this file?</value>
-  </data>
-  <data name="RejectText.ToolTip" xml:space="preserve">
-    <value>Reject</value>
-  </data>
-  <data name="MsgFileNoHaveTimeStamp" xml:space="preserve">
-    <value>File Uploaded has not Time Information, Please check the file and re-upload</value>
-  </data>
-  <data name="MsgFileNotForCurrentBatch" xml:space="preserve">
-    <value>File Uploaded is not in the Current Batch</value>
-  </data>
-  <data name="MsgFileNotForPriorDate" xml:space="preserve">
-    <value>Prior date file can't be uploaded!.</value>
+  <data name="lblAnswer.Text" xml:space="preserve">
+    <value>Antworten</value>
   </data>
 </root>
