Task#12 : Password field move to details from grid

--- a/WebApp/CityAdmin/App_LocalResources/StudentDetails.aspx.de-DE.resx
+++ b/WebApp/CityAdmin/App_LocalResources/StudentDetails.aspx.de-DE.resx
@@ -213,4 +213,10 @@
   <data name="lblgrdDelete.Text" xml:space="preserve">
     <value>Wählen</value>
   </data>
+  <data name="lblPassword.Text" xml:space="preserve">
+    <value>Passwort :</value>
+  </data>
+  <data name="rfvPassword.ErrorMessage" xml:space="preserve">
+    <value>Bitte gib einen gültige Passwort an</value>
+  </data>
 </root>
