--- a/WebApp/ClassAdmin/App_LocalResources/StudentDetails.aspx.de-DE.resx
+++ b/WebApp/ClassAdmin/App_LocalResources/StudentDetails.aspx.de-DE.resx
@@ -216,4 +216,10 @@
   <data name="lblgrdDelete.Text" xml:space="preserve">
     <value>Wählen</value>
   </data>
+  <data name="lblPassword.Text" xml:space="preserve">
+    <value>Passwort :</value>
+  </data>
+  <data name="rfvPassword.ErrorMesssage" xml:space="preserve">
+    <value>Bitte gib einen gültige Passwort an</value>
+  </data>
 </root>
