9ai -Text change in logged in page: Support
15 - Make uploaded files down-loadable
16 - Text change

--- a/WebApp/CityAdmin/App_LocalResources/Support.aspx.resx
+++ b/WebApp/CityAdmin/App_LocalResources/Support.aspx.resx
@@ -124,7 +124,12 @@
     <value>Company Details:</value>
   </data>
   <data name="lblh2Head.Text" xml:space="preserve">
-    <value>Here's how you can contact Bike Tour for more support</value>
+    <value>Are there problems with the website,
+The app or the GPS device? Then
+You have the right ones here
+Contact for all problems
+Concerning the Internet site Matchrider
+With other questions or the app:</value>
   </data>
   <data name="lblh2n.Text" xml:space="preserve">
     <value>Contact:</value>
