Following points convered in this check in :
1. All changed of 9 applies to studend page/teacher page/admin page
2. Make pdf files downloadable in logged in page: support which will be provided
3. Make a software downloadable which will be provided

--- a/WebApp/CityAdmin/App_LocalResources/Support.aspx.de-DE.resx
+++ b/WebApp/CityAdmin/App_LocalResources/Support.aspx.de-DE.resx
@@ -156,4 +156,9 @@
   <data name="rfvtxtEmail.ErrorMessage" xml:space="preserve">
     <value>Bitte geben sie eine Emailadresse an.</value>
   </data>
+  <data name="lblDownloadMessage.Text" xml:space="preserve">
+    <value>Hier findet ihr eine Software um Dateien, die ihr mit dem GPS Gerät aufgezeichnet habt anzusehen
+und sie in einem Format abzuspeichern das es euch erlaubt die Datei hochzuladen. Wie das
+funktioniert erklärt euch der Leitfaden, den ihr euch ebenfalls hier runderladen könnt.</value>
+  </data>
 </root>
