--- a/WebApp/ClassAdmin/App_LocalResources/UploadGpx.aspx.resx
+++ b/WebApp/ClassAdmin/App_LocalResources/UploadGpx.aspx.resx
@@ -213,4 +213,10 @@
   <data name="MsgFileNotForPriorDate" xml:space="preserve">
     <value>Prior date file can't be uploaded!.</value>
   </data>
+  <data name="MsgAvgSpeedIsLow" xml:space="preserve">
+    <value>Your are very slow, Please increase your speed.</value>
+  </data>
+  <data name="MsgUploadException" xml:space="preserve">
+    <value>There is an error while uploading .GPX file, please check .GPX or contact administrator</value>
+  </data>
 </root>
