--- a/WebApp/Student/App_LocalResources/UploadGpx.aspx.de-DE.resx
+++ b/WebApp/Student/App_LocalResources/UploadGpx.aspx.de-DE.resx
@@ -151,7 +151,7 @@
     <value>Erfolgreich hochgeladenen Datei!</value>
   </data>
   <data name="MsgSelectGPX" xml:space="preserve">
-    <value>Wählen Sie GPX-Datei!</value>
+    <value>Nur GPX-Dateien können hochladen.</value>
   </data>
   <data name="SpeedLimitCrossed" xml:space="preserve">
     <value>La limite de vitesse franchi!</value>
@@ -173,5 +173,8 @@
   </data>
   <data name="MsgUploadException" xml:space="preserve">
     <value>Es ist ein Fehler beim Hochladen GPX-Datei, überprüfen Sie bitte .GPX oder Kontakt Administrator</value>
+  </data>
+  <data name="MsgAvgSpeedIsLow" xml:space="preserve">
+    <value>Sie sind sehr langsam, erhöhen Sie bitte Ihre Geschwindigkeit.</value>
   </data>
 </root>
