--- a/WebApp/Student/App_LocalResources/UploadGpx.aspx.resx
+++ b/WebApp/Student/App_LocalResources/UploadGpx.aspx.resx
@@ -151,7 +151,7 @@
     <value>File uploaded successfully!</value>
   </data>
   <data name="MsgSelectGPX" xml:space="preserve">
-    <value>Select GPX file!</value>
+    <value>Only GPX files are allowed to upload.</value>
   </data>
   <data name="SpeedLimitCrossed" xml:space="preserve">
     <value>Speed limit crossed!</value>
@@ -173,5 +173,8 @@
   </data>
   <data name="MsgUploadException" xml:space="preserve">
     <value>There is an error while uploading .GPX file, please check .GPX or contact administrator</value>
+  </data>
+  <data name="MsgAvgSpeedIsLow" xml:space="preserve">
+    <value>Your are very slow, Please increase your speed.</value>
   </data>
 </root>
