--- a/WebApp/CityAdmin/App_LocalResources/UploadGpx.aspx.de-DE.resx
+++ b/WebApp/CityAdmin/App_LocalResources/UploadGpx.aspx.de-DE.resx
@@ -219,4 +219,7 @@
   <data name="MsgFileNotForPriorDate" xml:space="preserve">
     <value>Diese Datei wurde vor dem Starttermin deiner Stadt erstellt</value>
   </data>
+  <data name="btn_AddKms.Text" xml:space="preserve">
+    <value>KM eintragen</value>
+  </data>
 </root>
