--- a/WebApp/Student/App_LocalResources/UploadGpx.aspx.resx
+++ b/WebApp/Student/App_LocalResources/UploadGpx.aspx.resx
@@ -180,4 +180,7 @@
   <data name="MsgFileNotForPriorDate" xml:space="preserve">
     <value>Prior date file can't be uploaded!.</value>
   </data>
+  <data name="btn_AddKms.Text" xml:space="preserve">
+    <value>Add Kms</value>
+  </data>
 </root>
