--- a/WebApp/CityAdmin/App_LocalResources/UploadGpx.aspx.resx
+++ b/WebApp/CityAdmin/App_LocalResources/UploadGpx.aspx.resx
@@ -222,4 +222,10 @@
   <data name="btn_AddKms.Text" xml:space="preserve">
     <value>Add Kms Driven</value>
   </data>
+<data name="MsgAvgSpeedExceed" xml:space="preserve">
+    <value>The speed of the track is too high.</value>
+  </data>
+  <data name="MsgHighSpeedExceed" xml:space="preserve">
+    <value>The speed of the track is too high.</value>
+  </data>
 </root>
