--- a/WebApp/Student/App_LocalResources/UploadGpx.aspx.de-DE.resx
+++ b/WebApp/Student/App_LocalResources/UploadGpx.aspx.de-DE.resx
@@ -183,4 +183,10 @@
   <data name="btn_AddKms.Text" xml:space="preserve">
     <value>KM eintragen</value>
   </data>
+  <data name="MsgAvgSpeedExceed" xml:space="preserve">
+    <value>Die Geschwindigkeit des Tracks ist zu hoch.</value>
+  </data>
+  <data name="MsgHighSpeedExceed" xml:space="preserve">
+    <value>Die Geschwingkeit des Tracks ist zu hoch.</value>
+  </data>
 </root>
